force-app/main/default/objects/Contact/fields/Account_Electric_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Account_Electric_Contract_Expiration__c</fullName>
    <formula>Account.Current_Plan_Expiration__c</formula>
    <label>Account - Electric Contract Expiration</label>
    <type>Date</type>
</CustomField>