force-app/main/default/objects/Contact/fields/Account_Gas_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Account_Gas_Contract_Expiration__c</fullName>
    <formula>Account.Gas_Contract_Expiration__c</formula>
    <label>Account - Gas Contract Expiration</label>
    <type>Date</type>
</CustomField>