force-app/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mark the contact inactive if the contact is no longer at that company</description>
    <inlineHelpText>Mark the contact inactive if the contact is no longer at that company</inlineHelpText>
    <label>Active Contact?</label>
    <type>Checkbox</type>
</CustomField>