force-app/main/default/objects/Contact/fields/AEM_Contact__c.field-meta.xml
<CustomField>
    <fullName>AEM_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AEM Contact</label>
    <type>Checkbox</type>
</CustomField>