force-app/main/default/objects/Contact/fields/Availability_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Availability_Preferences__c</fullName>
    <description>Indicates the availability of the contact (EX: Only available during business hours)</description>
    <label>Availability Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>