force-app/main/default/objects/Contact/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billing contact on one or more Bill Groups.</description>
    <inlineHelpText>Billing contact on one or more Bill Groups.</inlineHelpText>
    <label>Billing Contact</label>
    <type>Checkbox</type>
</CustomField>