force-app/main/default/objects/Contact/fields/CES_Weekly_Market_Update__c.field-meta.xml
<CustomField>
    <fullName>CES_Weekly_Market_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CES Weekly Market Update</label>
    <type>Checkbox</type>
</CustomField>