force-app/main/default/objects/Contact/fields/Contact_and_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_and_Account_Name__c</fullName>
    <formula>FirstName + &#39; &#39; + LastName  + &#39; - &#39; + Account.Name</formula>
    <label>Contact and Account Name</label>
    <type>Text</type>
</CustomField>