force-app/main/default/objects/Contact/fields/Contact_for_Confirmations__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Confirmations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmations contact on one or more CES Contracts.</description>
    <inlineHelpText>Confirmations contact on one or more CES Contracts.</inlineHelpText>
    <label>Contact for Confirmations</label>
    <type>Checkbox</type>
</CustomField>