force-app/main/default/objects/Contact/fields/Contact_for_Notices__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Notices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notices contact on one or more CES Contracts.</description>
    <inlineHelpText>Notices contact on one or more CES Contracts.</inlineHelpText>
    <label>Contact for Notices</label>
    <type>Checkbox</type>
</CustomField>