force-app/main/default/objects/Contact/fields/Contact_ID_kludge__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_kludge__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID kludge</label>
    <type>Text</type>
</CustomField>