force-app/main/default/objects/Contact/fields/Contact_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Suffix__c</fullName>
    <description>additional text to add to the contact name for invoicing, etc</description>
    <inlineHelpText>additional text to add to the contact name for invoicing, etc</inlineHelpText>
    <label>Contact Name Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>