force-app/main/default/objects/Contact/fields/Contact_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Email__c</fullName>
    <formula>Owner_Link__r.Email</formula>
    <label>Contact Owner Email</label>
    <type>Text</type>
</CustomField>