force-app/main/default/objects/Contact/fields/Contact_Owner_Email_New__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Email_New__c</fullName>
    <formula>Owner.Email</formula>
    <label>Contact Owner Email New</label>
    <type>Text</type>
</CustomField>