force-app/main/default/objects/Contact/fields/Contact_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Name__c</fullName>
    <formula>Owner_Link__r.FirstName&amp;&quot; &quot;&amp;Owner_Link__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Name</label>
    <type>Text</type>
</CustomField>