force-app/main/default/objects/Contact/fields/Contact_Owner_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Name_New__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName</formula>
    <label>Contact Owner Name New</label>
    <type>Text</type>
</CustomField>