force-app/main/default/objects/Contact/fields/Contact_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Phone__c</fullName>
    <formula>Owner_Link__r.Phone</formula>
    <label>Contact Owner Phone</label>
    <type>Text</type>
</CustomField>