force-app/main/default/objects/Contact/fields/Contact_Owner_Phone_New__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Phone_New__c</fullName>
    <formula>Owner.Phone</formula>
    <label>Contact Owner Phone New</label>
    <type>Text</type>
</CustomField>