force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>What type of contact is this?  Select all that apply.</description>
    <inlineHelpText>What type of contact is this?  Select all that apply.</inlineHelpText>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Primary</fullName>
            </value>
            <value>
                <fullName>Customer Secondary</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Confirmations</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Billing Primary</fullName>
            </value>
            <value>
                <fullName>Billing Secondary</fullName>
            </value>
            <value>
                <fullName>Premise Primary</fullName>
            </value>
            <value>
                <fullName>Billing-Contract</fullName>
            </value>
            <value>
                <fullName>Notices</fullName>
            </value>
            <value>
                <fullName>Consultant Payment</fullName>
            </value>
            <value>
                <fullName>Consultant Fee Exhibit</fullName>
            </value>
            <value>
                <fullName>Pipeline Operations</fullName>
            </value>
            <value>
                <fullName>Phone Line Issue</fullName>
            </value>
            <value>
                <fullName>FOM Confirmation</fullName>
            </value>
            <value>
                <fullName>Premise Curtailment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>