force-app/main/default/objects/Contact/fields/ContactAccountAddressMatch__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountAddressMatch__c</fullName>
    <formula>MailingAddressCopy__c  =  Account.BillingStreet</formula>
    <label>ContactAccountAddressMatch</label>
    <type>Checkbox</type>
</CustomField>