force-app/main/default/objects/Contact/fields/DM_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Status__c</fullName>
    <description>Update lead with the latest touchpoint made during the digital move flow.</description>
    <inlineHelpText>Digital Move Status</inlineHelpText>
    <label>DM Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>