force-app/main/default/objects/Contact/fields/Electr_Contr_Exp_Reminder_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Electr_Contr_Exp_Reminder_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if account wishes to receive electric contract expiration reminders.</description>
    <inlineHelpText>Check this box if account wishes to receive electric contract expiration reminders.</inlineHelpText>
    <label>Electr Contr Exp Reminder Email - Opt In</label>
    <type>Checkbox</type>
</CustomField>