force-app/main/default/objects/Contact/fields/Gas_Contract_Exp_Reminder_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Gas_Contract_Exp_Reminder_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if account wishes to receive gas contract expiration reminders.</description>
    <inlineHelpText>Check this box if account wishes to receive gas contract expiration reminders.</inlineHelpText>
    <label>Gas Contract Exp Reminder Email - Opt In</label>
    <type>Checkbox</type>
</CustomField>