force-app/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>CASE(Salutation,&quot;Mr.&quot;,&quot;Masculin&quot;,&quot;Ms.&quot;,&quot;Feminine&quot;,&quot;Mrs.&quot;,&quot;Feminine&quot;,&quot;Undetermined&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>