force-app/main/default/objects/Contact/fields/Generate_Workflow_Email__c.field-meta.xml
<CustomField>
    <fullName>Generate_Workflow_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Workflow Email</label>
    <type>Checkbox</type>
</CustomField>