force-app/main/default/objects/Contact/fields/HOU_Contact__c.field-meta.xml
<CustomField>
    <fullName>HOU_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary HOU Safari contact.</description>
    <inlineHelpText>Primary HOU Safari contact.</inlineHelpText>
    <label>HOU Contact</label>
    <type>Checkbox</type>
</CustomField>