force-app/main/default/objects/Contact/fields/LIVE_Contact__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary LIVE Safari contact.</description>
    <inlineHelpText>Primary LIVE Safari contact.</inlineHelpText>
    <label>LIVE Contact</label>
    <type>Checkbox</type>
</CustomField>