force-app/main/default/objects/Contact/fields/MailingAddressCopy__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressCopy__c</fullName>
    <formula>MailingStreet</formula>
    <label>MailingAddressCopy</label>
    <type>Text</type>
</CustomField>