force-app/main/default/objects/Contact/fields/MES_Contact__c.field-meta.xml
<CustomField>
    <fullName>MES_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a Mobile Energy Solutions contact for the account.</description>
    <inlineHelpText>This is a Mobile Energy Solutions contact for the account.</inlineHelpText>
    <label>MES Contact</label>
    <type>Checkbox</type>
</CustomField>