force-app/main/default/objects/Contact/fields/Monthly_Nomination_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Nomination_Volume__c</fullName>
    <inlineHelpText>For CEIP customers who receive emails for their nominations</inlineHelpText>
    <label>Monthly Nomination Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>