force-app/main/default/objects/Contact/fields/MPLS_Contact__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary MPLS Safari contact.</description>
    <inlineHelpText>Primary MPLS Safari contact.</inlineHelpText>
    <label>MPLS Contact</label>
    <type>Checkbox</type>
</CustomField>