force-app/main/default/objects/Contact/fields/old_ID__c.field-meta.xml
<CustomField>
    <fullName>old_ID__c</fullName>
    <externalId>true</externalId>
    <label>old ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>