force-app/main/default/objects/Contact/fields/Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>Owner_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Owner Link</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>