force-app/main/default/objects/Contact/fields/Premise_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Premise_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary contact on one or more premises.</description>
    <inlineHelpText>Primary contact on one or more premises.</inlineHelpText>
    <label>Premise Primary Contact</label>
    <type>Checkbox</type>
</CustomField>