force-app/main/default/objects/Contact/fields/Safari_HOU_Cust_Primary__c.field-meta.xml
<CustomField>
    <fullName>Safari_HOU_Cust_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safari HOU Cust Primary</label>
    <type>Checkbox</type>
</CustomField>