force-app/main/default/objects/Contact/fields/Search_Code__c.field-meta.xml
<CustomField>
    <fullName>Search_Code__c</fullName>
    <formula>&#39;all&#39;</formula>
    <label>Search Code</label>
    <type>Text</type>
</CustomField>