force-app/main/default/objects/Contact/fields/STL_Contact__c.field-meta.xml
<CustomField>
    <fullName>STL_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary STL Safari contact.</description>
    <inlineHelpText>Primary STL Safari contact.</inlineHelpText>
    <label>STL Contact</label>
    <type>Checkbox</type>
</CustomField>