force-app/main/default/objects/Contact/fields/Wants_TrueCost_Blog_as_Email__c.field-meta.xml
<CustomField>
    <fullName>Wants_TrueCost_Blog_as_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants TrueCost Blog as Email</label>
    <type>Checkbox</type>
</CustomField>