force-app/main/default/objects/Contact/fields/Wants_TrueCost_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Wants_TrueCost_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants TrueCost Newsletter</label>
    <type>Checkbox</type>
</CustomField>