force-app/main/default/objects/Contact/fields/Wants_weekly_meter_data_email__c.field-meta.xml
<CustomField>
    <fullName>Wants_weekly_meter_data_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants weekly meter data email</label>
    <type>Checkbox</type>
</CustomField>