force-app/main/default/objects/Contact/validationRules/Contact_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Info</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsPersonAccount = FALSE,
ISNEW(),
OR(
Account.RecordTypeId = &#39;01230000000njET&#39;,
Account.RecordTypeId = &#39;012300000018b9t&#39;,
Account.RecordTypeId = &#39;012300000018cVk&#39;
),
OR(
ISBLANK(FirstName),
AND(
ISBLANK(Phone),
ISBLANK(MobilePhone), 
ISBLANK(Fax), 
ISBLANK(Email)
)
)
)</errorConditionFormula>
    <errorMessage>Contact02: Contacts require first AND last name, then either phone, fax, or email to be saved.</errorMessage>
</ValidationRule>