force-app/main/default/objects/Contact/validationRules/Contract_Exp_Reminders_for_Inactive_Acct.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Exp_Reminders_for_Inactive_Acct</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
Gas_Contract_Exp_Reminder_Email_Opt_In__c = TRUE, 
Electr_Contr_Exp_Reminder_Email_Opt_In__c = TRUE 
),
 Account.Active__c =TRUE
)</errorConditionFormula>
    <errorMessage>Contact01: Account must be inactive to receive contract expiration reminders. (This can be edited on the account page)</errorMessage>
</ValidationRule>