force-app/main/default/objects/Contact/listViews/All_FOM_Confirmation_Contacts.listView-meta.xml
<ListView>
    <fullName>All_FOM_Confirmation_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Monthly_Nomination_Volume__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>includes</operation>
        <value>FOM Confirmation</value>
    </filters>
    <label>All FOM Confirmation Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>