force-app/main/default/objects/Contact/listViews/Customers_after_5_15_2012.listView-meta.xml
<ListView>
    <fullName>Customers_after_5_15_2012</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/15/2012 12:00 AM</value>
    </filters>
    <label>Customers after 5/15/2012</label>
    <sharedTo>
        <group>CustomerService</group>
        <group>REPservice</group>
    </sharedTo>
</ListView>