force-app/main/default/objects/Contact/listViews/Golf_Tourney.listView-meta.xml
<ListView>
    <fullName>Golf_Tourney</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Golf Tourney</label>
</ListView>