force-app/main/default/objects/Contact/listViews/Holiday_E_Card_Active_List_Current.listView-meta.xml
<ListView>
    <fullName>Holiday_E_Card_Active_List_Current</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>@</value>
    </filters>
    <filters>
        <field>Account_Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Business Account,Community Organization,Utility,Pipeline,Partner/Vendor</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notContain</operation>
        <value>@centerpointenergy</value>
    </filters>
    <label>Holiday E-Card Active List (Current)</label>
    <language>en_US</language>
</ListView>