force-app/main/default/objects/Contact/listViews/Mark_Wolf_Contacts.listView-meta.xml
<ListView>
    <fullName>Mark_Wolf_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Owner_Name_New__c</field>
        <operation>equals</operation>
        <value>Mark Wolf</value>
    </filters>
    <label>Mark Wolf Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>