force-app/main/default/objects/Contact/listViews/MN.listView-meta.xml
<ListView>
    <fullName>MN</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contract_Number__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>mdorn</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>9/15/2016 12:00 AM</value>
    </filters>
    <label>MN Notification</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
        <group>Contract_Adminstration</group>
    </sharedTo>
</ListView>