force-app/main/default/objects/Contact/listViews/My_Active_Contacts_CES.listView-meta.xml
<ListView>
    <fullName>My_Active_Contacts_CES</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contact_Owner_Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Active Contacts (CES)</label>
    <sharedTo>
        <role>Midwest_Illinois_Sales_Consulting</role>
        <role>Midwest_Illinois_and_Indiana_Sales_Management</role>
        <role>Midwest_Indiana_Sales</role>
        <role>Midwest_Indiana_Sales_Management</role>
        <role>North_East_Sales</role>
        <role>North_East_Sales_Management</role>
        <role>Producer_Services_Management</role>
        <role>Producer_Services_Sales</role>
        <role>Rockies_Sales</role>
        <role>Rockies_Sales_Management</role>
        <role>South_East_Sales</role>
        <role>South_East_Sales_Management</role>
        <role>Utility_Sales</role>
        <role>Utility_Sales_Management</role>
    </sharedTo>
</ListView>