force-app/main/default/objects/Contact/listViews/My_Contacts_Imported_Today.listView-meta.xml
<ListView>
    <fullName>My_Contacts_Imported_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Contacts Imported Today</label>
    <language>en_US</language>
</ListView>