force-app/main/default/objects/Contact/listViews/Primary_Contacts.listView-meta.xml
<ListView>
    <fullName>Primary_Contacts</fullName>
    <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Contact_Owner_Name__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>HOU_Contact__c</columns>
    <columns>LIVE_Contact__c</columns>
    <columns>MPLS_Contact__c</columns>
    <columns>STL_Contact__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>Contact_for_Confirmations__c</columns>
    <columns>Contact_for_Notices__c</columns>
    <columns>Premise_Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HOU_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>STL_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>MPLS_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LIVE_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Premise_Primary_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Billing_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_for_Notices__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_for_Confirmations__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Primary Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
        <group>Contract_Adminstration</group>
        <group>Credit_Request_Administration</group>
        <roleAndSubordinatesInternal>Business_Services</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Contract_Administration</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Credit</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>